# skills-auditor

./: .gitignore  README.md  SKILL.md  pyproject.toml
config/: discovery-profile.cursor-jz.example.json  discovery-profile.gstack-fork.example.json  discovery-profile.gstack-multiplatform.example.json  skills-auditor.pipeline.example.env  sources.example.json  sources.gstack-fork.example.json
doc/: community-launch-kit.md
scripts/: skills_audit.py
skills/: README.md
skills/close/: SKILL.md
skills/dedup/: SKILL.md
skills/discover/: SKILL.md
skills/route/: SKILL.md
skills/sync/: SKILL.md
skills/traces/: SKILL.md
skills_auditor/: __init__.py  __main__.py  cli.py  state_machine.py
tests/: test_dedup.py  test_drift.py  test_duplicate_names.py  test_hash_dedup.py  test_platform.py  test_profile_exclude.py  test_route_pipeline.py  test_state_machine.py
